Fix Init of the Agent + qr, now happens only once.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,9 +4,8 @@
     <title>Aries Cloud Agent</title>
 </head>
 <body>
-    <h1>agentConfig <%= agentConfig %>!</h1>
     <h1>agentIsInitialized <%= agentIsInitialized %>!</h1>
-
-    <a href="/createConnection">Create a connection</a>
+    <br>
+    <img src="<%= qrCodeDataURL %>" alt="QR Code" />
 </body>
 </html>
